--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
